add beginning UI - working.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,18 @@
         </div>
       </nav>
 
-      <div id="displayMessage">
+      <div id="container">
+        <form id="playGame" method="post">
+          <label for="startingCity"></label>
+          <select name="startingCity" id="startingCity">
+
+          </select>
+          <button type="submit" class="btn btn-warning">Release The Virus</button>
+        </form>
+
+        <ul id="cities">
+
+        </ul>
 
       </div>
   </body>
