Add player stats to UI.

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
           <button type="submit" class="btn btn-warning">Release The Virus</button>
         </form>
 
+        <ul id="playerStats">
+          <li>Current City: <span id="currentCity"></span></li>
+          <li>Number of Cities Cured: <span id="citiesCured"></span></li>
+        </ul>
+
         <ul id="cities">
 
         </ul>
